// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design Systems|Molecules/Button/Base Large 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxirZ lgzomW"
    onClick={[Function]}
  >
    <p
      className="sc-AxhCb cuIxYa"
    >
      click
    </p>
  </button>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Button/Base Medium 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxirZ ehKCIm"
    onClick={[Function]}
  >
    <p
      className="sc-AxhCb cuIxYa"
    >
      click
    </p>
  </button>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Button/Base Small 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxirZ fzJlpv"
    onClick={[Function]}
  >
    <p
      className="sc-AxhCb cuIxYa"
    >
      click
    </p>
  </button>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Button/Base Small Inverse 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxirZ jIfvdX"
    onClick={[Function]}
  >
    <p
      className="sc-AxhCb cuIxYa"
    >
      click
    </p>
  </button>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Button/Cookie Base 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm iceKch"
  >
    <button
      className="sc-AxirZ kwHQpA"
      onClick={[Function]}
    >
      <p
        className="sc-AxhCb jhTscF"
      >
        OK
      </p>
    </button>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Button/Cookie Inverse 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm iceKch"
  >
    <button
      className="sc-AxirZ gJMSw"
      onClick={[Function]}
    >
      <p
        className="sc-AxhCb VjwRU"
      >
        Cookie Preferences
      </p>
    </button>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Button/Globe Base 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm isvGjR"
  >
    <button
      className="sc-AxirZ cvSzXr"
      onClick={[Function]}
    >
      <div
        className="sc-AxhUy eiaLRm"
      >
        <div
          className="sc-AxiKw jswfpj"
        >
          <svg
            viewBox="0 0 16 16"
          >
            <path
              d="m8.002.25a7.77 7.77 0 0 1 7.748 7.776 7.75 7.75 0 0 1 -7.521 7.72l-.246.004a7.75 7.75 0 0 1 -7.73-7.513l-.003-.245a7.75 7.75 0 0 1 7.752-7.742zm1.949 8.5h-3.903c.155 2.897 1.176 5.343 1.886 5.493l.068.007c.68-.002 1.72-2.365 1.932-5.23zm4.255 0h-2.752c-.091 1.96-.53 3.783-1.188 5.076a6.257 6.257 0 0 0 3.905-4.829zm-9.661 0h-2.75a6.257 6.257 0 0 0 3.934 5.075c-.615-1.208-1.036-2.875-1.162-4.686l-.022-.39zm1.188-6.576-.115.046a6.257 6.257 0 0 0 -3.823 5.03h2.75c.085-1.83.471-3.54 1.059-4.81zm2.262-.424c-.702.002-1.784 2.512-1.947 5.5h3.904c-.156-2.903-1.178-5.343-1.892-5.494l-.065-.007zm2.28.432.023.05c.643 1.288 1.069 3.084 1.157 5.018h2.748a6.275 6.275 0 0 0 -3.929-5.068z"
            />
          </svg>
        </div>
        <div
          className="sc-AxiKw jfFNDf"
        >
          <svg
            viewBox="0 0 256 256"
          >
            <g>
              <g>
                <polygon
                  points="225.813,48.907 128,146.72 30.187,48.907 0,79.093 128,207.093 256,79.093 		"
                />
              </g>
            </g>
          </svg>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Button/Search Base 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxirZ gwpFde"
    onClick={[Function]}
  >
    <div
      className="sc-AxjAm ijHNEA"
    >
      <div
        className="sc-AxiKw jikRtc"
      >
        <svg
          viewBox="0 0 56.966 56.966"
        >
          <path
            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
          />
        </svg>
      </div>
      <p
        className="sc-AxhCb cPjgMc"
      >
        Search
      </p>
    </div>
  </button>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Card/Dark Large 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm gfmURB"
  >
    <div
      className="sc-AxjAm kAPhWw"
    >
      <div
        className="sc-AxjAm jcqOdB"
      >
        <img
          alt="card-image"
          className="sc-AxgMl cvtRxr"
          src="darkcard-lg.png"
        />
      </div>
      <div
        className="sc-AxjAm bXaHUx"
      >
        <p
          className="sc-AxhCb cJSAZM"
        >
          Learn favorite summer recipes with celebrated chef Roze Traore
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Card/Dark Medium 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm hFICtt"
  >
    <div
      className="sc-AxjAm kAPhWw"
    >
      <div
        className="sc-AxjAm jcqOdB"
      >
        <img
          alt="card-image"
          className="sc-AxgMl cvtRxr"
          src="darkcard-md.png"
        />
      </div>
      <div
        className="sc-AxjAm dFnguV"
      >
        <p
          className="sc-AxhCb cJSAZM"
        >
          Fruits de mer with Michelin chef Marc Favier
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Card/Dark Small 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm kUkfrO"
  >
    <div
      className="sc-AxjAm kAPhWw"
    >
      <div
        className="sc-AxjAm jcqOdB"
      >
        <img
          alt="card-image"
          className="sc-AxgMl cvtRxr"
          src="darkcard-sm.png"
        />
      </div>
      <div
        className="sc-AxjAm dFnguV"
      >
        <p
          className="sc-AxhCb cJSAZM"
        >
          Fruits de mer with Michelin chef Marc Favier
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Card/Light Multiple 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm bUwkzS"
  >
    <div
      className="sc-AxjAm ckXsfb"
    >
      <div
        className="sc-AxjAm jcqOdB"
      >
        <img
          alt="card-image"
          className="sc-AxgMl cvtRxr"
          src="card1.jpg"
        />
      </div>
      <div
        className="sc-AxjAm dFnguV"
      >
        <p
          className="sc-AxhCb kLXMrl"
        >
          Online experiences
        </p>
        <p
          className="sc-AxhCb cBMJmN"
        >
          Unique activities we can do together, led by a world of hosts
        </p>
      </div>
    </div>
    <div
      className="sc-AxjAm ckXsfb"
    >
      <div
        className="sc-AxjAm jcqOdB"
      >
        <img
          alt="card-image"
          className="sc-AxgMl cvtRxr"
          src="card2.jpg"
        />
      </div>
      <div
        className="sc-AxjAm dFnguV"
      >
        <p
          className="sc-AxhCb kLXMrl"
        >
          Your next getaway
        </p>
        <p
          className="sc-AxhCb cBMJmN"
        >
          Unplug or reconnect on a trip that's just a short drive away
        </p>
      </div>
    </div>
    <div
      className="sc-AxjAm ckXsfb"
    >
      <div
        className="sc-AxjAm jcqOdB"
      >
        <img
          alt="card-image"
          className="sc-AxgMl cvtRxr"
          src="card3.jpg"
        />
      </div>
      <div
        className="sc-AxjAm dFnguV"
      >
        <p
          className="sc-AxhCb kLXMrl"
        >
          Entire homes
        </p>
        <p
          className="sc-AxhCb cBMJmN"
        >
          Comfortable private places, with room for friends or family
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Card/Light Single With Title 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm htNMvP"
  >
    <div
      className="sc-AxjAm ckXsfb"
    >
      <div
        className="sc-AxjAm jcqOdB"
      >
        <img
          alt="card-image"
          className="sc-AxgMl cvtRxr"
          src="card1.jpg"
        />
      </div>
      <div
        className="sc-AxjAm dFnguV"
      >
        <p
          className="sc-AxhCb kLXMrl"
        >
          Online experiences
        </p>
        <p
          className="sc-AxhCb cBMJmN"
        >
          Unique activities we can do together, led by a world of hosts
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Card/Light Single Without Title 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm htNMvP"
  >
    <div
      className="sc-AxjAm ckXsfb"
    >
      <div
        className="sc-AxjAm jcqOdB"
      >
        <img
          alt="card-image"
          className="sc-AxgMl cvtRxr"
          src="card1.jpg"
        />
      </div>
      <div
        className="sc-AxjAm dFnguV"
      >
        <p
          className="sc-AxhCb cBMJmN"
        >
          Unique activities we can do together, led by a world of hosts
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/Card/Section Black Lives Matter 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm zwqux"
  >
    <div
      className="sc-AxjAm heQYgx"
    >
      <div
        className="sc-AxjAm eAyVbj"
      >
        <div
          className="sc-AxjAm hAsXji"
        >
          <div
            className="sc-AxjAm cocgVm"
          >
            We stand with #BlackLivesMatter
          </div>
          <div
            className="sc-AxjAm eeNAti"
          >
            We believe in a world where everyone belongs. We reject all racism that stands in the way.
          </div>
          <div
            className="sc-AxjAm hAnyuu"
          >
            Donate
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/SearchBar Mobile 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm fjaeUw"
  >
    <button
      className="sc-AxirZ gBUFfL"
      onClick={[Function]}
    >
      <div
        className="sc-AxhUy eiaLRm"
      >
        <div
          className="sc-AxiKw lahuVH"
        >
          <svg
            viewBox="0 0 56.966 56.966"
          >
            <path
              d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
            />
          </svg>
        </div>
        <div
          className="sc-AxjAm gzylxM"
        >
          <p
            className="sc-AxhCb cuIxYa"
          >
            Where are you going?
          </p>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Design Systems|Molecules/SearchBar Normal 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxirZ iAGYQN"
    onClick={[Function]}
  >
    <div
      className="sc-AxhUy cbgUNe"
    >
      <div
        className="sc-AxjAm tWoWx"
      >
        <p
          className="sc-AxhCb cuIxYa"
        >
          Start your search
        </p>
      </div>
      <div
        className="sc-AxjAm kornSO"
      >
        <div
          className="sc-AxiKw fgjXyA"
        >
          <svg
            viewBox="0 0 56.966 56.966"
          >
            <path
              d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
            />
          </svg>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`Storyshots Design Systems|Organisms/Notification/Cookie Default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <div
    className="sc-AxjAm bkttMG"
  >
    <div
      className="sc-AxjAm icBPAH"
    >
      <div
        className="sc-AxjAm dycSZs"
      >
        <div
          className="sc-AxjAm ieaSbn"
        >
          <p
            className="sc-AxhCb cuIxYa"
          >
            We use cookies to help personalize content, tailor and measure ads, and provide a safer experience. By navigating the site, you agree to the use of cookies to collect information on and off Airbnb. Read our Cookie Policy to learn more or go to Cookie Preferences to manage your settings
          </p>
        </div>
        <div
          className="sc-AxjAm gTMHyH"
        >
          <div
            className="sc-AxjAm ivUTch"
          >
            <button
              className="sc-AxirZ kwHQpA"
              onClick={[Function]}
            >
              <p
                className="sc-AxhCb jhTscF"
              >
                OK
              </p>
            </button>
            <button
              className="sc-AxirZ gJMSw"
              onClick={[Function]}
            >
              <p
                className="sc-AxhCb VjwRU"
              >
                Cookie Preferences
              </p>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
